--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -10,7 +10,7 @@ html,
 body {
     height: 100%;
     scroll-behavior: smooth;
-    background-color: #FBF9F9;
+    background-color: white;
 }
 
 /* Input number */
