--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -13,6 +13,13 @@ body {
     background-color: white;
 }
 
+/* Shadows */
+
+.shadow-1 {
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+}
+
 /* Input number */
 
 input[type="number"]::-webkit-outer-spin-button,
