Header + Hero Desktop

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -13,6 +13,10 @@ body {
     background-color: white;
 }
 
+#__nuxt {
+    position: relative;
+}
+
 /* Input number */
 
 input[type="number"]::-webkit-outer-spin-button,
