--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -10,7 +10,23 @@ html,
 body {
     height: 100%;
     scroll-behavior: smooth;
-    background-color: white;
+    background-color: #F9F9F9;
+}
+
+html {
+    scroll-padding-top: 4.5rem;
+}
+
+@media (min-width: 1024px) {
+    html {
+        scroll-padding-top: 5.5rem;
+    }
+}
+
+@media (min-width: 1536px) {
+    html {
+        scroll-padding-top: 4.25rem;
+    }
 }
 
 #__nuxt {
@@ -37,4 +53,25 @@ input[type="number"]::-webkit-inner-spin-button {
 .custom-scrollbar::-webkit-scrollbar-thumb {
     background: #cccccc;
     border-radius: 3px;
+}
+
+/* Animated Underline */
+.underline-animated {
+    position: relative;
+    display: inline-block;
+}
+
+.underline-animated::after {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: currentColor;
+    transition: width 0.3s ease;
+}
+
+.underline-animated:hover::after {
+    width: 100%;
 }
