--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,3 +1,21 @@
+:root {
+    --brand-primary: #005CB9;
+    --brand-secondary: #279ece;
+    --brand-terciary: #212C54;
+}
+
+[data-brand="waterplast"] {
+    --brand-primary: #005CB9;
+    --brand-secondary: #279ece;
+    --brand-terciary: #212C54;
+}
+
+[data-brand="rohermet"] {
+    --brand-primary: #385976;
+    --brand-secondary: #88A4B3;
+    --brand-terciary: #1E2E46;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +26,7 @@
 
 body {
     font-display: swap;
+    color: #010101;
 }
 
 @supports (font-display: swap) {
